--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <!-- <link rel="stylesheet" href="learning.js" class=""> -->
 </head>
 <body>
-    <h1 id="heading">min galar par</h1>
+    <h1 id="heading" title="this is heading" style="color: red; text-align: center" class="san kyi tar">min galar par</h1>
+    <button id="headingSmaller">-</button>
+    <button id="headingLarger">+</button>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, fugiat iste quae beatae omnis excepturi nesciunt libero atque accusantium harum? Impedit exercitationem dolor laboriosam inventore architecto quam asperiores delectus aliquid?</p>
     <input type="text" class=""id ="textInput" multiple>
-    <button id="btn" onclick="changeTitle()">Click Me</button>
+    <button id="btn" onclick="">Click Me</button>
     <ul id="listGroup">
         <li>apple</li>
         <li>banana</li>
